--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
         "start": "NODE_ENV=production node dist/index.js",
         "check": "tsc",
-        "db:push": "drizzle-kit push"
+        "db:push": "drizzle-kit push",
+        "deploy": "chmod +x deploy.sh && ./deploy.sh",
+        "update": "chmod +x update.sh && ./update.sh"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.10.0",
